feat: add routes for rsvp and refact
