# src/routes/rsvp.route.ts
@@ -1,0 +1,10 @@
+import { Router } from 'express';
+import { RsvpController } from '../controllers/rsvp.controller';
+
+const router = Router();
+
+// Attach controller methods to routes
+router.post('/', RsvpController.create);
+router.get('/', RsvpController.list);
+
+export default router;
